<resources>
    <string name="app_name">QuizzAPP</string>
    <string name="back_button">Backward Button</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="text_ranking">Ranking</string>
    <string name="text_lets_play">Let\'s play</string>
    <string name="description_trophy_image">Trophy image</string>
    <string name="description_vertical_line">Vertical line</string>
    <string name="description_coin_image">Coin image</string>
    <string name="text_points">Points</string>
    <string name="description_sport_image">Sport category image</string>
    <string name="text_sport">Sports</string>
    <string name="text_history">History</string>
    <string name="description_history_image">History category image</string>
    <string name="description_math_image">Math category image</string>
    <string name="text_math">Math</string>
    <string name="description_geography_image">Geography category image</string>
    <string name="text_geography">Geography</string>
    <string name="text_question_count_20">20 questions</string>
    <string name="_0">00</string>
    <string name="text_next">Next</string>
    <string name="error_network_connection">Oops! Looks like you\'re offline</string>
    <string name="hint_first_name">Enter your first name</string>
    <string name="hint_last_name">Enter your last name</string>
    <string name="hint_email">Enter your email</string>
    <string name="text_save">Save</string>
    <string name="description_subtract">Subtract button for profile image changed</string>
    <string name="hint_username">Enter your username</string>
    <string name="text_personal_information">Personal Information</string>
    <string name="hint_date_of_birth">Select your date of birth</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_email">Email</string>
    <string name="text_date_of_birth">Date of birth</string>

    // Months
    <string name="month_january">JAN</string>
    <string name="month_february">FEB</string>
    <string name="month_march">MAR</string>
    <string name="month_april">APR</string>
    <string name="month_may">MAY</string>
    <string name="month_june">JUN</string>
    <string name="month_july">JUL</string>
    <string name="month_august">AUG</string>
    <string name="month_september">SEP</string>
    <string name="month_october">OCT</string>
    <string name="month_november">NOV</string>
    <string name="month_december">DEC</string>

    <string name="text_create">Create</string>
    <string name="text_cup_image">Cup image</string>
    <string name="text_quiz_result">Quiz Result</string>
    <string name="text_play_again">Play again</string>
    <string name="text_back_to_home">Back to home</string>
    <string name="text_home">Home</string>
    <string name="text_leaderboard">Leaderboard</string>
    <string name="text_congratulation">Congratulation!</string>
    <string name="text_correct">%1$d Correct</string>
    <string name="text_incorrect">%1$d Wrong</string>
    <string name="text_score_info">You got the %1$d out of %2$d</string>
    <string name="text_replay_quiz">Replay Quiz</string>
    <string name="description_incorrect_icon">Incorrect icon</string>
    <string name="description_correct_icon">Correct icon</string>
    <string name="text_category">Category - %1$s</string>
    <string name="text_no_data">No data</string>
    <string name="text_toolbar_name">Hi, %1$s</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="storage_permission_required">Read external storage permission required.</string>
</resources>