<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.profile.create.CreateProfileFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Create Profile"
        app:titleTextAppearance="@style/ToolbarProfileTitleStyle" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_user_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        app:shapeAppearance="@style/CircleShapeableImageView" />

    <ImageView
        android:id="@+id/iv_subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/iv_user_image"
        android:layout_alignBottom="@id/iv_user_image"
        android:layout_marginEnd="4dp"
        android:background="@drawable/ripple_effect_circle"
        android:clickable="true"
        android:contentDescription="@string/description_subtract"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_subtract" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_subtract"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/text_first_name"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_fname"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_fname"
        android:layout_alignStart="@id/tv_fname"
        android:layout_alignEnd="@id/tv_fname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_fname"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/ic_person_gray"
            android:hint="@string/hint_first_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_fname"
        android:layout_alignStart="@id/tv_fname"
        android:layout_alignEnd="@id/tv_fname"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/text_last_name"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_last_name"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_lname"
        android:layout_alignStart="@id/tv_lname"
        android:layout_alignEnd="@id/tv_lname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_lname"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/ic_person_gray"
            android:hint="@string/hint_last_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_date_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_last_name"
        android:layout_alignStart="@id/tv_lname"
        android:layout_alignEnd="@id/tv_lname"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/text_date_of_birth"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_date_birth"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_date_birth"
        android:layout_alignStart="@id/tv_date_birth"
        android:layout_alignEnd="@id/tv_date_birth"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_date_birth"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/ic_calendar"
            android:editable="false"
            android:hint="@string/hint_date_of_birth" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_date_birth"
        android:layout_alignStart="@id/tv_date_birth"
        android:layout_alignEnd="@id/tv_date_birth"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/text_email"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_email"
        android:layout_alignStart="@id/tv_email"
        android:layout_alignEnd="@id/tv_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_email"
        android:layout_alignStart="@id/tv_email"
        android:layout_alignEnd="@id/tv_email"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_bold"
        android:padding="10dp"
        android:text="@string/text_create"
        android:textSize="16sp"
        app:cornerRadius="10dp" />

</RelativeLayout>

