<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarSize="0dp"
    android:scrollbars="vertical"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:subtitle="Let's make this day productive"
            app:subtitleTextAppearance="@style/ToolbarSubTitleStyle"
            app:title="Hello, John"
            app:titleTextAppearance="@style/ToolbarTitleStyle"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:background="@drawable/ripple_effect_circle"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person_gray"
                app:contentPadding="4dp"
                app:shapeAppearance="@style/CircleShapeableImageView" />
        </com.google.android.material.appbar.MaterialToolbar>

        <ImageView
            android:id="@+id/iv_line_vertical"
            android:layout_width="2dp"
            android:layout_height="?actionBarSize"
            android:background="#CDCDCD"
            android:contentDescription="@string/description_vertical_line"
            android:elevation="7dp"
            android:outlineAmbientShadowColor="@android:color/transparent"
            android:outlineSpotShadowColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@id/card_rank"
            app:layout_constraintEnd_toEndOf="@id/card_rank"
            app:layout_constraintStart_toStartOf="@id/card_rank"
            app:layout_constraintTop_toTopOf="@id/card_rank" />

        <ImageView
            android:id="@+id/iv_point"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/description_coin_image"
            android:elevation="8dp"
            android:src="@drawable/ic_coin"
            app:layout_constraintBottom_toBottomOf="@id/card_rank"
            app:layout_constraintEnd_toEndOf="@id/iv_line_vertical"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="@id/card_rank"
            app:layout_constraintTop_toTopOf="@id/card_rank" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_point"
            style="@style/HomeScreenTextViewStyle"
            android:elevation="8dp"
            android:text="@string/text_points"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_point"
            app:layout_constraintEnd_toEndOf="@id/card_rank"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@id/iv_point"
            app:layout_constraintTop_toTopOf="@id/iv_point" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_point_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/_0"
            android:textColor="?colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_point"
            app:layout_constraintEnd_toEndOf="@id/card_rank"
            app:layout_constraintStart_toEndOf="@id/iv_line_vertical"
            app:layout_constraintTop_toTopOf="@id/iv_point" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_rank"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            app:cardCornerRadius="15dp"
            app:cardElevation="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="@id/toolbar"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_bias="0.04"
            app:layout_constraintWidth_percent="0.95" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_lets_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/text_lets_play"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/card_rank"
            app:layout_constraintTop_toBottomOf="@id/card_rank"
            app:layout_constraintVertical_bias="0.05" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_sport"
            style="@style/CategoryCardViewStyle"
            android:layout_width="0dp"
            android:layout_height="180dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toStartOf="@id/tv_lets_play"
            app:layout_constraintTop_toBottomOf="@id/tv_lets_play"
            app:layout_constraintVertical_bias="0.09"
            app:layout_constraintWidth_percent="0.44" />

        <ImageView
            android:id="@+id/iv_sport"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description_sport_image"
            android:elevation="6dp"
            android:src="@drawable/ic_basketball"
            app:layout_constraintBottom_toBottomOf="@id/card_sport"
            app:layout_constraintEnd_toEndOf="@id/card_sport"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="@id/card_sport"
            app:layout_constraintTop_toBottomOf="@id/tv_lets_play"
            app:layout_constraintVertical_bias="0.15" />

        <TextView
            android:id="@+id/tv_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/text_sport"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/card_sport"
            app:layout_constraintStart_toStartOf="@id/iv_sport"
            app:layout_constraintTop_toBottomOf="@id/iv_sport"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/tv_sport_questions_count"
            style="@style/HomeScreenTextViewStyle"
            android:elevation="6dp"
            android:text="@string/text_question_count_20"
            app:layout_constraintStart_toStartOf="@id/tv_sport"
            app:layout_constraintTop_toBottomOf="@id/tv_sport" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_history"
            style="@style/CategoryCardViewStyle"
            android:layout_width="0dp"
            android:layout_height="210dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/card_rank"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/card_sport"
            app:layout_constraintTop_toTopOf="@id/card_sport"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent="0.44" />

        <ImageView
            android:id="@+id/iv_history"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description_history_image"
            android:elevation="6dp"
            android:src="@drawable/ic_history"
            app:layout_constraintBottom_toBottomOf="@id/card_history"
            app:layout_constraintEnd_toEndOf="@id/card_history"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="@id/card_history"
            app:layout_constraintTop_toTopOf="@id/iv_sport"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/text_history"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/card_history"
            app:layout_constraintStart_toStartOf="@id/iv_history"
            app:layout_constraintTop_toBottomOf="@id/iv_history"
            app:layout_constraintVertical_bias="0.65" />

        <TextView
            android:id="@+id/tv_history_question_count"
            style="@style/HomeScreenTextViewStyle"
            android:elevation="6dp"
            android:text="@string/text_question_count_20"
            app:layout_constraintStart_toStartOf="@id/tv_history"
            app:layout_constraintTop_toBottomOf="@id/tv_history" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_math"
            style="@style/CategoryCardViewStyle"
            android:layout_width="0dp"
            android:layout_height="210dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/card_sport"
            app:layout_constraintTop_toBottomOf="@id/card_history"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.44" />

        <Space
            android:id="@+id/space_horizontal"
            android:layout_width="0dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toTopOf="@id/card_geography"
            app:layout_constraintEnd_toEndOf="@id/card_geography"
            app:layout_constraintStart_toStartOf="@id/card_geography"
            app:layout_constraintTop_toBottomOf="@id/card_history" />

        <ImageView
            android:id="@+id/iv_math"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description_math_image"
            android:elevation="6dp"
            android:src="@drawable/ic_math"
            app:layout_constraintBottom_toBottomOf="@id/card_math"
            app:layout_constraintEnd_toEndOf="@id/card_math"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="@id/card_math"
            app:layout_constraintTop_toBottomOf="@id/card_sport"
            app:layout_constraintVertical_bias="0.15" />

        <TextView
            android:id="@+id/tv_math"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/text_math"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/card_math"
            app:layout_constraintStart_toStartOf="@id/iv_math"
            app:layout_constraintTop_toBottomOf="@id/iv_math"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/tv_math_questions_count"
            style="@style/HomeScreenTextViewStyle"
            android:elevation="6dp"
            android:text="@string/text_question_count_20"
            app:layout_constraintStart_toStartOf="@id/tv_math"
            app:layout_constraintTop_toBottomOf="@id/tv_math" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_geography"
            style="@style/CategoryCardViewStyle"
            android:layout_width="0dp"
            android:layout_height="210dp"
            app:layout_constraintStart_toStartOf="@id/card_history"
            app:layout_constraintTop_toBottomOf="@id/space_horizontal"
            app:layout_constraintWidth_percent="0.44" />

        <ImageView
            android:id="@+id/iv_geography"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description_geography_image"
            android:elevation="6dp"
            android:src="@drawable/ic_geography"
            app:layout_constraintBottom_toBottomOf="@id/card_geography"
            app:layout_constraintEnd_toEndOf="@id/card_geography"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="@id/card_geography"
            app:layout_constraintTop_toBottomOf="@id/card_history"
            app:layout_constraintVertical_bias="0.15" />

        <TextView
            android:id="@+id/tv_geography"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/text_geography"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/card_geography"
            app:layout_constraintStart_toStartOf="@id/iv_geography"
            app:layout_constraintTop_toBottomOf="@id/iv_geography"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/tv_geography_questions_count"
            style="@style/HomeScreenTextViewStyle"
            android:elevation="6dp"
            android:text="@string/text_question_count_20"
            app:layout_constraintStart_toStartOf="@id/tv_geography"
            app:layout_constraintTop_toBottomOf="@id/tv_geography" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>